--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,7 @@
   "background": {
       "service_worker": "background.js"
     },
-    "permissions": ["storage", "activeTab", "scripting", "tabs", "idle", "webNavigation", "alarms"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs"],
     "host_permissions": ["<all_urls>"],
   "action": {
       "default_popup": "popup.html",
